# cplus-qt-chess

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
components/: utils.h
components/board/: board.cpp  board.css  board.h  board.scss
components/button/: buton.cpp  button.cpp  button.css  button.h  button.qss  button.scss
components/chess/: chess.cpp  chess.h
components/lines/: lines.cpp  lines.h
test/client/: client.cpp
test/server/: server.cpp
windows/chief/: chief.cpp  chief.h
windows/connect/: connect.cpp  connect.h
windows/game/: game.cpp  game.css  game.h  game.scss
